--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
 
 ::selection {
   color: white;
-  background: #31929A;
+  background: #3B82F6;
 }
 
 body {
@@ -182,7 +182,7 @@ body {
 
 .bg-accent {
   --tw-bg-opacity: 1;
-  background-color: rgb(49 146 154 / var(--tw-bg-opacity))
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity))
 }
 
 .bg-background {
@@ -591,7 +591,7 @@ body {
 .after\:bg-accent::after {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: rgb(49 146 154 / var(--tw-bg-opacity))
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity))
 }
 
 .hover\:bg-indigo-500:hover {
