--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  a {
+    @apply text-indigo-500 hover:text-indigo-400;
+  }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -109,10 +115,5 @@ body {
 }
 
 .tiptap a {
-  color: #60a5fa;
   text-decoration: underline;
-}
-
-.tiptap a:hover {
-  color: #93c5fd;
 }
